Patch jdk11 incompatibility